# any-cli

./: .env  .env.example  .gitignore  AI_PROVIDER_FIX_SUMMARY.md  BINARY_DISTRIBUTION.md  CLAUDE.md  CLI_TOOLS_UPDATE.md  CODE_IMPROVEMENT_REPORT.md  CRITICAL_SECURITY_AUDIT.md  DEPLOYMENT_GUIDE.md  EMBEDDED_TOOLS_IMPLEMENTATION.md  FINAL_STATUS_REPORT.md  FINAL_SYSTEM_STATUS.md  FINAL_SYSTEM_VERIFICATION.md  FIXES_APPLIED.md  FIX_SUMMARY.md  FUNCTIONALITY_ANALYSIS_REPORT.md  IMPLEMENTATION_GUIDE.md  INSTALLATION.md  INTERACTIVE_CLI_IMPLEMENTATION.md  LSP_INTEGRATION_SUMMARY.md  PLATO_COMPLETION_REPORT.md  PLATO_FUNCTIONALITY_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PROJECT_INDEX.md  QUICKSTART.md  QUICK_FIXES.md  README.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_RESULTS.md  SECURITY_FIX_SUMMARY.md  SECURITY_REMEDIATION_COMPLETE.md  SERENA_INTEGRATION_REPORT.md  STATS.md  SYSTEM_COMPLETE.md  TEST_EXECUTION_REPORT.md  build.sh  config.example.yaml  config.yaml  (+53 more)
bundle/: meta.json  qwen-claude.cjs  qwen-claude.js  qwen-claude.js.map
docs/: API.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  DEVELOPMENT.md  EXAMPLES.md  QUICK_REFERENCE.md  SETUP.md  TOOLS.md  TROUBLESHOOTING.md
docs/plan/: roadmap.md  slices.md
examples/: basic_usage.py
plato/: __init__.py  cli.py  interactive_cli.py
plato/core/: __init__.py  ai_router.py  context_manager.py  mcp_manager.py  security.py
plato/core/embedded_lsp/: __init__.py  code_analysis.py  fallback_analyzer.py  lsp_manager.py  symbol_tools.py
plato/core/embedded_tools/: __init__.py  base.py  file_tools.py  tool_manager.py
plato/core/orchestration/: __init__.py  agent_orchestrator.py
plato/integrations/: __init__.py  serena_mcp.py  serena_mcp_fixed.py
plato/server/: __init__.py  api.py
release/v0.1.0/: BINARY_DISTRIBUTION.md  RELEASE_NOTES.md  checksums.json  checksums.txt  install.bat  install.sh
scripts/: build-binaries.js  build.js  clean.js  copy_bundle_assets.js  generate-git-commit-info.js  package-release.js  start.js
test_files/: example.js  example.py  example.ts
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_ai_provider_failover.py  test_ai_router_integration.py  test_api_integration.py  test_basic.py  test_cli_integration.py  test_config.yaml  test_context_compression.py  test_end_to_end.py  test_layout_fix.py  test_mcp_connection_handling.py  test_mcp_manager_integration.py  test_serena_integration.py
